; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/vt6655/extr_mac.c_MACvDisableKeyEntry.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/vt6655/extr_mac.c_MACvDisableKeyEntry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MISCFIFO_KEYETRY0 = common dso_local global i32 0, align 4
@MISCFIFO_KEYENTRYSIZE = common dso_local global i32 0, align 4
@MAC_REG_MISCFFNDEX = common dso_local global i64 0, align 8
@MAC_REG_MISCFFDATA = common dso_local global i64 0, align 8
@MAC_REG_MISCFFCTL = common dso_local global i64 0, align 8
@MISCFFCTL_WRITE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MACvDisableKeyEntry(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @MISCFIFO_KEYETRY0, align 4
  store i32 %6, i32* %5, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @MISCFIFO_KEYENTRYSIZE, align 4
  %9 = mul nsw i32 %7, %8
  %10 = load i32, i32* %5, align 4
  %11 = add nsw i32 %10, %9
  store i32 %11, i32* %5, align 4
  %12 = load i64, i64* %3, align 8
  %13 = load i64, i64* @MAC_REG_MISCFFNDEX, align 8
  %14 = add nsw i64 %12, %13
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @VNSvOutPortW(i64 %14, i32 %15)
  %17 = load i64, i64* %3, align 8
  %18 = load i64, i64* @MAC_REG_MISCFFDATA, align 8
  %19 = add nsw i64 %17, %18
  %20 = call i32 @VNSvOutPortD(i64 %19, i32 0)
  %21 = load i64, i64* %3, align 8
  %22 = load i64, i64* @MAC_REG_MISCFFCTL, align 8
  %23 = add nsw i64 %21, %22
  %24 = load i32, i32* @MISCFFCTL_WRITE, align 4
  %25 = call i32 @VNSvOutPortW(i64 %23, i32 %24)
  ret void
}

declare dso_local i32 @VNSvOutPortW(i64, i32) #1

declare dso_local i32 @VNSvOutPortD(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
